Fix vertical align of favicon

--- a/core/app/assets/stylesheets/annotation.scss
+++ b/core/app/assets/stylesheets/annotation.scss
@@ -30,5 +30,5 @@
 .proxy-link-favicon {
   width: 16px;
   height: 16px;
-  vertical-align: text-top;
+  vertical-align: sub;
 }
